# work_py

./: .gitignore  README.md  pyproject.toml
src/app/: __init__.py  hello.py
tests/: test_hello.py
